fix z-index and opacity

--- a/SRC/scss/layout/_header.scss
+++ b/SRC/scss/layout/_header.scss
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: var(--grid-container);
     position: fixed;
+    z-index: 999;
 
     &__inner {
         grid-column: inner;
